test/valid/60294_if_else_value/if_else_value.mag
-- Author: 60294, Pedro Rosa
fun main(_): Unit -> Unit =
    var x: Int = if 5 > 3 then 10 else 20;
    print(x)