test/invalid-semantics/57551_var_scope_parentheses/var_scope_parentheses.mag
-- Author: 57551, Eduardo Proença

-- Variable declared inside parentheses is not in scope afterwards (unbound identifier)

fun main (_) : Unit -> Unit =
    (var x : Int = 3);
    print(x)